# signature-schemes

./: .gitignore  .travis.yml  Cargo.toml  LICENCE  README.md
amcl/: Cargo.toml
amcl/src/: gcm.rs  hash384.rs  lib.rs
amcl/src/bls381/: ecdh.rs  ecp.rs  ecp2.rs
amcl/src/bls383/: big.rs  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  mpin.rs  pair.rs  rom.rs
amcl/src/secp256k1/: ecdh.rs
benches/: bls381_benches.rs
bls/: Cargo.toml  README.md
bls/src/: aggr_fast.rs  aggr_slow.rs  common.rs  lib.rs  multi_sig_fast.rs  multi_sig_slow.rs  simple.rs  threshold_sig.rs
delg_cred_cdd/: Cargo.toml  README.md
delg_cred_cdd/src/: attribute_token.rs  errors.rs  groth_sig.rs  issuer.rs  lib.rs  pok_vc.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
musig/: Cargo.toml  README.md
musig/src/: amcl_utils.rs  errors.rs  lib.rs  musig.rs  types.rs
ps/: Cargo.toml  README.md
ps/src/: errors.rs  keys.rs  lib.rs  pok.rs  pok_sig.rs  pok_vc.rs  signature.rs
ps/tests/: scenario.rs
src/: README.md  aggregates.rs  amcl_utils.rs  bls.rs  constants.rs  errors.rs  g1.rs  g2.rs  keys.rs  lib.rs  rng.rs  signature.rs  types.rs
src/bls/: README.md  aggr_fast.rs  aggr_new.rs  aggr_old.rs  aggr_slow.rs  aggregates.rs  amcl_utils.rs  common.rs  constants.rs  errors.rs  keys.rs  mod.rs  signature.rs  simple.rs  types.rs
src/musig/: README.md  amcl_utils.rs  constants.rs  mod.rs  musig.rs
src/test_vectors/: test_bls.yml
src/utils/: mod.rs
