[package]
name = "bls-aggregates"
version = "0.4.1"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>"]
description = "Various signature schemes. BLS, MuSig"
license = "MIT/Apache-2.0"

[dependencies]
amcl = { path = "./amcl" }
hex = "0.3.1"
lazy_static = "1.0"
rand = "0.5.3"
tiny-keccak = "1.4.2"
yaml-rust = "0.4"
