[package]
name = "bls-aggregates"
version = "0.5.1"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>"]
description = "Various signature schemes. BLS, MuSig"
license = "MIT/Apache-2.0"

[[bench]]
name = "bls381_benches"
harness = false

[dependencies]
amcl = { path = "./amcl" }
hex = "0.3"
lazy_static = "1.0"
rand = "0.5"
tiny-keccak = "1.4"
yaml-rust = "0.4"
criterion = "0.2"
