[package]
name = "bls-acml"
version = "0.3.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>"]
description = "BLS signatures. 2 variations"
license = "Apache-2.0"

[dependencies]
rand = "0.6"
lazy_static = "1.3.0"
log = "*"

[dependencies.amcl_wrapper]
version = "0.1.6"
default-features = false
features = ["bls381"]