[package]
name = "bls_amcl"
version = "0.7.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>"]
description = "BLS signatures. 2 variations. Multi-signature, Threshold signature, batch verification support"
repository = "https://github.com/lovesh/signature-schemes/tree/master/bls"
license = "Apache-2.0"

[dependencies]
rand = "0.7"
lazy_static = "1.3.0"
log = "0.4.8"
serde = "1.0"
serde_derive = "1.0"
secret_sharing = "0.1.1"

[dependencies.amcl_wrapper]
version = "0.2.1"
default-features = false
features = ["bls381"]

[features]
default = ["SignatureG2"]
SignatureG1 = []    # signature and message are in G1, verification key in G2
SignatureG2 = []    # signature and message are in G2, verification key in G1